# any2eln

./: .gitignore  CHANGELOG.md  DEVDOC.md  LICENSE  README.md  SECURITY.md  local.env.dist  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: black.yml
any2eln/: __main__.py
any2eln/labfolder/: labfolder.py
any2eln/utils/: rocrate.py  utils.py
