[project]
name = "any2eln"
version = "0.1.0"
description = "Tool to transfer data from ELN to .eln"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.1.0",
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "types-requests>=2.32.4.20250913",
    "types-tqdm>=4.67.0.20250809",
]

[tool.black]
line-length = 120
target-version = ['py313']
skip-string-normalization = true
